# hdfs-log-anomaly-detection

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: c7f65290acad_create_initial_schema.py
artifacts/: README.md
configs/: api.yaml  drain3.ini  lstm_many_to_many.yaml  lstm_many_to_many_data.yaml  lstm_many_to_many_nllmax_e128_h128_l2_d02.yaml  lstm_many_to_many_nllmax_e32_h64_l1_d00.yaml  lstm_many_to_many_nllmax_e64_h128_l1_d00.yaml  lstm_many_to_many_nllmax_e64_h128_l2_d01.yaml  lstm_many_to_many_nllmax_e64_h256_l1_d00.yaml  lstm_one_step.yaml  lstm_one_step_data.yaml  lstm_one_step_e64_h128_l1_d00.yaml  lstm_one_step_e64_h256_l1_d00.yaml  tabular_baselines.yaml
data/: README.md
deploy/ansible/: README.md  ansible.cfg  inventory.ini.example  playbook.yml
deploy/ansible/templates/: docker-compose.prod.yml.j2  env.j2
examples/: anomaly_block_logs.txt  api_forward_anomaly.json  api_forward_normal.json  normal_block_logs.txt
migrations/: env.py
migrations/versions/: 0001_create_request_history.py
notebooks/: 01_preprocessed_logs_eda.ipynb  02_tabular_baselines_eval.ipynb  03_lstm_one_step_eval.ipynb  04_lstm_one_step_architecture_experiments.ipynb  05_lstm_many_to_many_scoring_eval.ipynb  06_lstm_many_to_many_architecture_experiments.ipynb
reports/: README.md
reports/eda/tables/: P_anom.csv  P_delta.csv  P_norm.csv  event_transitions_skew_anomaly_top30.csv  event_transitions_skew_normal_top30.csv  event_transitions_top30.csv  events_anomaly_top10.csv  events_normal_top10.csv  events_only_anomaly.csv  events_skew_to_anomaly_top10.csv  timeinterval_desc_group_by_label.csv
reports/tabular_baselines/tables/: feature_importance_logistic_regression.csv  feature_importance_random_forest.csv  tabular_test_metrics.csv  tabular_thresholds.csv  tabular_validation_metrics.csv  test_metrics_isolation_forest.csv  test_metrics_logistic_regression.csv  test_metrics_random_forest.csv  validation_metrics_isolation_forest.csv  validation_metrics_logistic_regression.csv  validation_metrics_random_forest.csv
scripts/: check_api_forward.py  evaluate_lstm_many_to_many.py  evaluate_lstm_one_step.py  evaluate_tabular_baselines.py  prepare_lstm_data.py  train_lstm_many_to_many.py  train_lstm_one_step.py  train_tabular_baseline.py
src/hdfs_anomaly/: __init__.py
src/hdfs_anomaly/api/: app.py  auth.py  config.py  database.py  history.py  inference.py  resources.py  schemas.py
src/hdfs_anomaly/app/: __init__.py
src/hdfs_anomaly/data/: __init__.py  loading.py
src/hdfs_anomaly/features/: __init__.py  parsing.py  tabular.py
src/hdfs_anomaly/frontend/: app.py  config.py  main.py
src/hdfs_anomaly/metrics/: __init__.py  classification.py  lstm_many_to_many.py  lstm_one_step.py
src/hdfs_anomaly/models/: tabular.py  (+3 more)
tests/: __init__.py  conftest.py  helpers.py  test_admin_profiles.py  test_app.py  test_auth.py  test_auth_schemas.py  test_history.py  test_model.py  test_model_schemas.py  test_profile.py  test_profile_schemas.py  test_request_logging.py
tests/rate_limit/: test_admin_rate_limit.py  test_history_rate_limit.py  test_login_rate_limit.py  test_model_rate_limit.py  test_profile_rate_limit.py  test_rate_limit_keys.py  test_rate_limit_service.py  test_registration_rate_limit.py
(+107 files in other folders)
