[project]
name = "hdfs-log-anomaly-detection"
version = "0.1.0"
description = "Anomaly detection in HDFS logs using tabular ML, LSTM sequence models, and a FastAPI inference service."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
api = [
    "alembic",
    "cachetools==4.2.1",
    "drain3==0.9.11",
    "fastapi",
    "joblib",
    "numpy",
    "pandas",
    "python-jose[cryptography]",
    "pyyaml",
    "scikit-learn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "torch==2.12.1",
    "uvicorn",
    "pwdlib[argon2]",
    "email-validator"
]

frontend = [
    "httpx",
    "streamlit",
]

all = [
    "hdfs-log-anomaly-detection[api,frontend]",
]

[dependency-groups]
dev = [
    "mypy",
    "pandas-stubs",
    "pytest",
    "ruff",
]
notebooks = [
    "ipython",
    "jupyter",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdfs_anomaly"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/hdfs_anomaly/app/api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src", "scripts"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
